apps/wolnelektury_core/static/css/new.book.css
body {
    font-size: 16px;
    font-family: Georgia, "Times New Roman", serif;
    line-height: 1.5em;
    margin: 0;
}

a {
    color: blue;
    text-decoration: none;
}

/* ================================== */
/* = Header with logo and menu      = */
/* ================================== */
#toc ol, #themes ol, #objects ol {
    list-style: none;
    padding: 0;
    margin: 0;
}

#toc ol li {
    font-weight: bold;
}

#toc ol ol {
    padding: 0 0 1.5em 1.5em;
    margin: 0;
}

#toc ol ol li {
    font-weight: normal;
}

#toc h2 {
    display: none;
}

#toc .anchor {
    float: none;
    margin: 0;
    color: blue;
    font-size: 16px;
    position: inherit;
}

#info p {
    margin: 1em 0 0;
}

/* =================================================== */
/* = Common elements: headings, paragraphs and lines = */
/* =================================================== */
h1 {
    font-size: 3em;
    margin: 1.5em 0;
    text-align: center;
    line-height: 1.5em;
    font-weight: bold;
}

h2 {
    font-size: 2em;
    margin: 1.5em 0 0;
    font-weight: bold;
    line-height: 1.5em;
}

h3 {
    font-size: 1.5em;
    margin: 1.5em 0 0;
    font-weight: normal;
    line-height: 1.5em;
}

h4 {
    font-size: 1em;
    margin: 1.5em 0 0;
    line-height: 1.5em;
}

p {
    margin: 0;
}

/* ======================== */
/* = Footnotes and themes = */
/* ======================== */

.annotation {
    font-style: normal;
    font-weight: normal;
    font-size: .75em;
    padding-left: 2px;
    position: relative;
    top: -4px;
}

#footnotes {
    margin-top: 3em;
}

#footnotes .annotation {
    display: block;
    float: left;
    width: 2.5em;
    clear: both;
}

#footnotes div {
    margin: 1.5em 0 0 0;
}

#footnotes p, #footnotes ul {
    margin-left: 2.5em;
    font-size: 0.875em;
}

#footnotes .permalink {
    font-size: .75em;
}

blockquote {
    font-size: 0.875em;
}

/* ============= */
/* = Numbering = */
/* ============= */
.verse, .paragraph {
    position:relative;
}
/*.anchor {
    position: absolute;
    margin: -0.25em -0.5em;
    color: #777;
    font-size: 12px;
    text-align: center;
    padding: 0.25em 0.5em;
    line-height: 1.5em;
}*/


/* =================== */
/* = Custom elements = */
/* =================== */
span.author {
    font-size: 0.5em;
    display: block;
    line-height: 1.5em;
    margin-bottom: 0.25em;
}

span.collection {
    font-size: 0.375em;
    display: block;
    line-height: 1.5em;
    margin-bottom: -0.25em;
}

span.subtitle {
    font-size: 0.5em;
    display: block;
    line-height: 1.5em;
    margin-top: -0.25em;
}

span.translator {
    font-size: 0.375em;
    display: block;
    line-height: 1.5em;
    margin-top: 0.25em;
}

div.didaskalia {
    font-style: italic;
    margin: 0.5em 0 0 1.5em;
}

div.kwestia {
    margin: 0.5em 0 0;
}

div.stanza {
    margin: 1.5em 0 0;
}

div.kwestia div.stanza {
    margin: 0;
}

p.paragraph {
    text-align: justify;
    margin: 0;
    text-indent: 1.5em;
}

p.motto {
    text-align: justify;
    font-style: italic;
    margin: 1.5em 0 0;
}

p.motto_podpis {
    font-size: 0.875em;
    text-align: right;
}

div.fragment {
    border-bottom: 0.1em solid #999;
    padding-bottom: 1.5em;
}

div.note p, div.dedication p, div.note p.paragraph, div.dedication p.paragraph {
    text-align: right;
    font-style: italic;
}

hr.spacer {
    height: 3em;
    visibility: hidden;
}

hr.spacer-line {
    margin: 1.5em 0;
    border: none;
    border-bottom: 0.1em solid #000;
}

p.spacer-asterisk {
    padding: 0;
    margin: 1.5em 0;
    text-align: center;
}

div.person-list ol {
    list-style: none;
    padding: 0 0 0 1.5em;
}

p.place-and-time {
    font-style: italic;
}

em.math, em.foreign-word, em.book-title, em.didaskalia {
    font-style: italic;
}

em.author-emphasis {
    letter-spacing: 0.1em;
}

em.person {
    font-style: normal;
    font-variant: small-caps;
}

.verse:after {
    content: "\feff";
}


/* =================================== */
/* = Hide some elements for printing = */
/* =================================== */

@media print {
    #menu {display: none;}
}

